--- a/css/portifolio.css
+++ b/css/portifolio.css
@@ -120,6 +120,7 @@ footer {
     background-color: rgb(143, 37, 37);
     color: rgb(255, 255, 255);
     position: absolute;
+    margin-top: 50px;
     bottom: 0;
     width: 100%;
     height: 50px;
@@ -272,8 +273,8 @@ hr {
 .index img {
     float: left;
     margin-left: 10%;
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
     margin-bottom: 500px;
     margin-right: 50px;
